--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 /* Arquivo: src/components/Footer/Footer.css */
 
 .footer {
-  background-color: #8a0383d0;
+  background-color: #020f58;
   color: #fff;
   text-align: center;
   padding: 10px 2;
