--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 /* Header.css */
 
 header {
-  background-color: #ff2600af;
+  background-color: #020f58;
   color: #fff;
   padding: 10px 20px;
   width: 100%;
