subindo primeiro visual04

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,16 +1,42 @@
 /* Arquivo: src/components/Footer/Footer.css */
 
 .footer {
-  background-color: #020f58;
-  color: #fff;
+  background-color: #020f58; /* Cor de fundo do rodapé */
+  color: #fff; /* Cor do texto */
   text-align: center;
-  padding: 10px 2;
+  padding: 10px 20px; /* Ajustado o padding */
   position: fixed;
   bottom: -50px; /* Inicialmente fora da tela */
   width: 100%;
   transition: bottom 0.3s ease; /* Transição suave para animar o aparecimento */
+  font-size: 0.9rem; /* Ajustado o tamanho da fonte */
 }
 
 .footer.visible {
   bottom: 0; /* Mostra o footer quando chegar ao fim da página */
+}
+
+.footer p {
+  margin: 0; /* Remove a margem padrão */
+}
+
+.footer a {
+  color: #fff; /* Cor do link */
+  text-decoration: none; /* Remove o sublinhado */
+}
+
+.footer a:hover {
+  text-decoration: underline; /* Sublinha o link ao passar o mouse */
+}
+
+.footer .a-financeira {
+  font-weight: bold; /* Destaca o texto */
+}
+
+.footer .developer {
+  font-weight: normal; /* Define o peso da fonte para o link do desenvolvedor */
+}
+
+.footer .developer:hover {
+  color: #ccc; /* Cor do link ao passar o mouse */
 }
